--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>MapQml.qml</file>
+        <file>Map.qml</file>
+        <file>mapMarker.png</file>
     </qresource>
 </RCC>
