--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file>Map.qml</file>
+        <file>mapInteraction.qml</file>
         <file>mapMarker.png</file>
+        <file>mapMarker1.png</file>
     </qresource>
 </RCC>
