--- a/StartWindow.ui
+++ b/StartWindow.ui
@@ -56,7 +56,7 @@ background-color: #f2e7ff;
      </property>
      <property name="styleSheet">
       <string notr="true">*{
-background-color: #eae0f7;
+background-color: #dbdcf7;
 }</string>
      </property>
      <property name="widgetResizable">
@@ -179,7 +179,7 @@ QPushButton:default {
      </property>
      <property name="styleSheet">
       <string notr="true">*{
-background-color: #eae0f7;
+background-color: #dbdcf7;
 }</string>
      </property>
      <property name="widgetResizable">
@@ -290,7 +290,7 @@ QPushButton:default {
      </property>
      <property name="styleSheet">
       <string notr="true">*{
-background-color: #eae0f7;
+background-color: #dbdcf7;
 }</string>
      </property>
      <property name="widgetResizable">
@@ -400,7 +400,7 @@ QPushButton:default {
      </property>
      <property name="styleSheet">
       <string notr="true">*{
-background-color: #eae0f7;
+background-color: #dbdcf7;
 }</string>
      </property>
      <property name="widgetResizable">
@@ -510,7 +510,7 @@ QPushButton:default {
      </property>
      <property name="styleSheet">
       <string notr="true">*{
-background-color: #eae0f7;
+background-color: #dbdcf7;
 }</string>
      </property>
      <property name="widgetResizable">
@@ -604,6 +604,36 @@ QPushButton:default {
      </widget>
     </widget>
    </widget>
+  </widget>
+  <widget class="QLCDNumber" name="lcdNumber">
+   <property name="geometry">
+    <rect>
+     <x>800</x>
+     <y>10</y>
+     <width>191</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">*{
+background-color: #dbdcf7;
+}</string>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="smallDecimalPoint">
+    <bool>false</bool>
+   </property>
+   <property name="digitCount">
+    <number>7</number>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Filled</enum>
+   </property>
+   <property name="value" stdset="0">
+    <double>0.000000000000000</double>
+   </property>
   </widget>
  </widget>
  <resources>
