--- a/ClientTable.ui
+++ b/ClientTable.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Список клиентов</string>
   </property>
   <property name="windowIcon">
    <iconset resource="images.qrc">
