--- a/OrderCreation.ui
+++ b/OrderCreation.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Таблица оформления заказа</string>
   </property>
   <property name="windowIcon">
    <iconset resource="images.qrc">
