--- a/StaffTable.ui
+++ b/StaffTable.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Список сотрудников</string>
   </property>
   <property name="windowIcon">
    <iconset resource="images.qrc">
